-*-outline-*-

* in progress
  fixed uninstall problem when trying to remove twice the same file (don't
  record it twice in the first place - be more permissive anyway).  Additionally
  remove directories that have become empty.

  added support for automatically installing missing packages identified by
  their MOGUL id in the makefile.oz "requires" feature.

* version 0.88
  protect against build circularities. added ExpandInCWD functionality -
  used it to make e.g. src and build dir absolute so that when added to
  a resolver they function properly even if a temporary chDir is performed.

* version 0.87
  use compressedFile support instead of Oz pickles if support is available.

* version 0.86
  complete rework of the computation of dependencies. e.g. to take
  into account the run-time dependencies of build-time dependencies.
  fixed bug in package creation with circular imports.

* version 0.85
  for autodepend to work as expected, the build rule for ozl needs to
  consider all the recursive dependencies.

* version 0.84
  fixed a bug introduced by 0.83.  The explicit "depends" in the makefile.oz
  were being ignored.

* version 0.83
** ozmake will now automatically compute build-time and install-time
   dependencies, but sofar only for Oz sources.  This can be
   controlled by --(no)autodepend, which is true by default.

* version 0.82
** honor new OZ_DOTOZ introduced in Mozart 1.2.4

* version 0.81.4
** forgot to enter changes
** gumpdir support still unusable in 1.2.3. turned off
** --publish: don't try to install docs when there is none
   otherwise publishing contact complains about missing mogul id
** don't try to chdir in dry-run mode (the dir may be missing)

* version 0.79
** fixed "fast" compiler invocation to also pass debug switch

* version 0.78
** automatically remove spurious trailing slashes on MOGUL IDs.
** `provides' in submakefiles are now really not forgotten

* version 0.77
** --fast is now `really' the default